--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["logs"]
 
+[tool.hatch.build]
+include = ["logs/**/*.py"]
+
